# ChangeLog for dev-libs/apr_memcache
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 May 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  New ebuild for mod_memcache
