@@ -1,3 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST apr_memcache-0.7.0.tar.bz2 162634 RMD160 2c4373dfbe0eea36786e449743c7d1df33c530b3 SHA1 073e11e3d46ed88ad7bee15179ed80a9069f5356 SHA256 9f2f0f552c807e5d0b1af50d9053e5404fe507f4662cd08dca1494aaf88d0c9b
 EBUILD apr_memcache-0.7.0.ebuild 553 RMD160 6c1d278bb6f9094b7ae0437ba14372a7adb8742b SHA1 64c763bf045aee1ec320d0671a84b59cf90ac30a SHA256 b398426a1a495f23b85c1079100e2167ff28b1ebfda7bfb7fe4ea426c3ab2709
-MISC ChangeLog 217 RMD160 fa372632e644db932f5e4d65f8859e5e7315b65b SHA1 13e11fb5b102e8cddb405202cfd3dda08e3cf222 SHA256 a5b32a80e474ac63e20c3f6dab22137cfe7f4a0bfca52694d87ff0ea166a4c2d
+MISC ChangeLog 305 RMD160 7ee29dc2525e27bd69b13f9a9dcbb5f4ec9c7710 SHA1 45b848113e232adec78e72d7e00dd67da919cef0 SHA256 1a9c6b137cbf42f0d09417ebfac9aed78d32bf5d013b7d1097009cb7b75a0d82
+MISC metadata.xml 488 RMD160 f04cbafc16315194c064157b003ba7f9382c8595 SHA1 7c8addf57f3ba0103e0a2c3aae4e5311da747d4e SHA256 cadd57c0b064f0e1b0f8ef5f18e14809b3fd4e58b02d49c828d198c9722e1cc6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlD2EQW+hXSf0t0IRAuIFAJ9JO/hCSf60SMEOre+X4PH2dMoa5ACfZdKn
+rirAG9vNT3s6bBEe4qd8ZWo=
+=IUry
+-----END PGP SIGNATURE-----
