@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2009; Lance Albertson <ramereth@gentoo.org> +metadata.xml:
+  Add metadata.xml
+
   15 May 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
   New ebuild for mod_memcache
 
